<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction_text"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:textSize="16sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userName"
            android:hint= "@string/your_name"
            android:inputType="text"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/music_question_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_question_1"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textSize="24sp" />

        <Button

          android:id="@+id/question1_option1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/question1_option1"
          android:background="#FF4081"
          android:layout_marginBottom="16dp"
          android:textColor="#ffff"
          android:textStyle="bold"
          android:textAppearance="?android:textAppearanceMedium" />

        <Button
                    android:id="@+id/question1_option2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question1_option2"
            android:background="#FF4081"
            android:textColor="#ffff"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
                    android:textAppearance="?android:textAppearanceMedium" />


        <TextView
            android:id="@+id/your_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/your_score"
            android:textColor="#000"
            android:textSize="24sp" />


    </LinearLayout>

</ScrollView>